# DelayedConstructor

./: .build_googletest_travis.py  .download_cmake_travis.py  .gitignore  .install_cmake_travis.py  .travis.yml  CMakeLists.txt  README.md
include/: DelayedConstructor.h  StackDeferred.h  StaticConstructor.h
include/DelayedConstructor/: DelayedConstructor.h
src/: CMakeLists.txt  DelayedConstructor_tests.cpp  StackDeferred_tests.cpp  StaticConstructor_tests.cpp
