if((GTEST_FOUND) AND ("${CMAKE_CURRENT_SOURCE_DIR}" STREQUAL "${CMAKE_SOURCE_DIR}/src"))
    add_executable(StaticConstructorUnitTests StaticConstructor_tests.cpp)
    target_include_directories(StaticConstructorUnitTests PUBLIC ${GTEST_INCLUDE_DIRS})
    set_target_properties(StaticConstructorUnitTests PROPERTIES CXX_STANDARD 11)
    set_target_properties(StaticConstructorUnitTests PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
    target_link_libraries(StaticConstructorUnitTests PUBLIC GTest::GTest)
    target_link_libraries(StaticConstructorUnitTests PUBLIC GTest::Main)
    if(CMAKE_CXX_COMPILER_ID MATCHES Clang)
        target_link_libraries(StaticConstructorUnitTests PUBLIC stdc++)
    endif()
    add_test(NAME StaticConstructorUnitTests COMMAND StaticConstructorUnitTests)
endif()
