if(GTEST_FOUND AND (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME))
    add_executable(DelayedConstructorUnitTests DelayedConstructor_tests.cpp)
    target_include_directories(DelayedConstructorUnitTests PUBLIC ${GTEST_INCLUDE_DIRS})
    set_target_properties(DelayedConstructorUnitTests PROPERTIES CXX_STANDARD 11)
    set_target_properties(DelayedConstructorUnitTests PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
    target_link_libraries(DelayedConstructorUnitTests PUBLIC DelayedConstructor)
    target_link_libraries(DelayedConstructorUnitTests PUBLIC GTest::GTest)
    target_link_libraries(DelayedConstructorUnitTests PUBLIC GTest::Main)
    add_test(NAME DelayedConstructorUnitTests COMMAND DelayedConstructorUnitTests)
endif()
